--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
       While my visualizations will certainly take a different form, I am interested in counter cartographies and layers as a method or mode of analysis.
     </p>
     <p>
-      <a href="#" target="_blank">My full community of practice can be explored here.</a>
-    </p>
+  My full community of practice can be explored <a href="https://mika-yassur.github.io/community_of_practice/" target="_blank">here</a>.
+</p>
 
     <!-- NEW FADE-IN PARAGRAPH -->
     <p class="fade-in-delayed hidden" id="situatedness-paragraph">
@@ -114,7 +114,7 @@
 <section class="panel right-panel" id="panel-materialities">
   <div class="text-content">
     <p>
-      I am interested in exploring materialities, creative cartographies, topographical lines, ecological transformations (can fermentation be political? Can burning? Can growth?), through art, through investigation, through repetition, through writing, through mapping, through sensing of all kinds.
+      In terms of methods, I am interested in exploring materialities, creative cartographies, topographical lines, ecological transformations (can fermentation be political? Can burning? Can growth?), through art, through investigation, through repetition, through writing, through mapping, through sensing of all kinds.
     </p>
     <p>
       More specifically I am interested in GIS, in composites of satellite images, in LiDAR, projectors, the interplay between the digital and non digital. My work will likely be qualitative, focusing on aesthetic, material, and written processes.
@@ -125,7 +125,7 @@
 
     <!-- New paragraph spaced lower -->
     <p class="lower-paragraph">
-      My project for Computational Design Modeling explores perception, lived experience, memory and the built environment. I’m working on a model that triggers the visualization of the buildings around it as a point moves through space, reflecting on the ways in which our reality is shaped by what we notice around us.
+      As for my work this semester, my project for Computational Design Modeling explores perception, lived experience, memory and the built environment. I’m working on a model that triggers the visualization of the buildings around it as a point moves through space, reflecting on the ways in which our reality is shaped by what we notice around us.
     </p>
   </div>
 </section>
