--- a/index.html
+++ b/index.html
@@ -76,14 +76,14 @@
 
 <section class="panel" id="panel1">
   <div class="concepts-wrapper">
-    <p class="intro-text">my work is at the intersection of</p>
+    <p class="intro-text">My work is at the intersection of</p>
     <div class="concepts">
       <p id="concept-eyal" class="concept">critical architectural theory</p>
       <p id="concept-saba" class="concept">interdisciplinary art practices</p>
       <p id="concept-samia" class="concept">colonial landscape studies</p>
     </div>
     <p class="extended-paragraph fade-in-delay">
-      and emerges from a lineage of people addressing colonial violence through architectural and interdisciplinary theory and methods. Their works engage with images, with testimonies, with materiality, assemblages of concepts, and profound attunement to detail. They are concerned with the nuance and importance of visual presentation as a tool; their work is dimensional and spatial in theory and content; they are transparent about their processes and make their tools, sources, and methods accessible to others. They push the boundaries of their practices, prioritize marginalized experiences, and make room for nuance. I hope my work will be imbued with all of these qualities.
+      and emerges from a lineage of people addressing colonial violence through architectural and interdisciplinary theory and methods. Their works engage with images, testimonies, materiality, assemblages of concepts, and profound attunement to detail. They are concerned with the nuance and importance of visual presentation as a tool; their work is dimensional and spatial in theory and content; they are transparent about their processes and make their tools, sources, and methods accessible to others. They push the boundaries of their practices, prioritize marginalized experiences, and make room for nuance. I hope my work will be imbued with all of these qualities.
     </p>
   </div>
 </section>
@@ -92,7 +92,7 @@
 <section class="panel" id="panel-cartography">
   <div class="text-content">
     <p>
-      Drawing on some aspects of my precedent study, I’m interested in examining and exploring ecocide in Gaza and the West Bank. I’m interested in working across scales—in looking at soil toxified through military invasion, at aerial photographs and satellite images.
+      Drawing on some aspects of my precedent study, I’m interested in exploring ecocide in Gaza and the West Bank. I want in working across scales—to examine at soil toxified through military invasion, at aerial photographs and satellite images.
     </p>
     <p>
       One thing I found compelling about the methods used for ‘A Cartography of Genocide’ is that they integrated the granularity of data points with a meta-analysis of the military’s invasion and patterns of deliberate violence across aspects of life.
@@ -106,7 +106,7 @@
 
     <!-- NEW FADE-IN PARAGRAPH -->
     <p class="fade-in-delayed hidden" id="situatedness-paragraph">
-      In terms of the colloquium theme, I’m interested in situating technology in its historical, political, and material contexts. I’m intrigued by the concept of ‘situatedness’ on micro and macro levels, along with Forensic Architecture’s theoretical theory of aesthetic sensing, thresholds of visibility, and minute observing.
+      In terms of the colloquium theme, I’m interested in situating technology in its historical, political, and material contexts. I’m intrigued by the concept of ‘situatedness’ on micro and macro levels, along with Forensic Architecture’s theory of aesthetic sensing, thresholds of visibility, and minute observing.
     </p>
   </div>
 </section>
@@ -117,7 +117,7 @@
       In terms of methods, I am interested in exploring materialities, creative cartographies, topographical lines, ecological transformations (can fermentation be political? Can burning? Can growth?), through art, through investigation, through repetition, through writing, through mapping, through sensing of all kinds.
     </p>
     <p>
-      More specifically I am interested in GIS, in composites of satellite images, in LiDAR, projectors, the interplay between the digital and non digital. My work will likely be qualitative, focusing on aesthetic, material, and written processes.
+      More specifically I am interested in GIS, composites of satellite images, LiDAR, projectors, the interplay between the digital and non digital. My work will likely be qualitative, focusing on aesthetic, material, and written processes.
     </p>
     <p>
       In my process, methods are usually preceded by theory; I want to find the technologies that correspond to the ideas I am exploring.
@@ -162,7 +162,7 @@
       Part of me feels as though it’s impossible for me, as I am now, to imagine what I will ultimately produce because it will involve theory I have not yet read, techniques I have not yet familiarized myself with, and perhaps a whole methodology I have yet to discover.
     </p>
     <p>
-      Finally, I can see myself coming up against feelings of futility and questions about the purpose or impact of my work. As I write these words there are people experiencing dire conditions of hunger and terror, and I don’t know what to do. And I know I can only keep going.
+      I can see myself coming up against feelings of futility and questions about the purpose or impact of my work. As I write these words there are people experiencing dire conditions of hunger and terror, and I don’t know what to do. The only thing I can think to do is keep workig.
     </p>
   </div>
 </section>
