--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <p class="intro-text">My work is at the intersection of</p>
     <div class="concepts">
       <p id="concept-eyal" class="concept">critical architectural theory</p>
-      <p id="concept-saba" class="concept">interdisciplinary art practices</p>
+      <p id="concept-saba" class="concept">multimedia art practices</p>
       <p id="concept-samia" class="concept">colonial landscape studies</p>
     </div>
     <p class="extended-paragraph fade-in-delay">
